<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mini_player_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mini_player_height"
    android:background="@drawable/bg_mini_player"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/spacing_sm"
    android:paddingEnd="@dimen/spacing_sm">

    <ImageView
        android:id="@+id/mini_art"
        android:layout_width="@dimen/album_art_mini"
        android:layout_height="@dimen/album_art_mini"
        android:contentDescription="@string/cd_album_art"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mini_title"
            style="@style/TextBodyPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/mini_artist"
            style="@style/TextBodySecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/mini_prev"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_prev"
        android:src="@drawable/ic_prev"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/mini_play"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_play"
        android:src="@drawable/ic_play"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/mini_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_next"
        android:src="@drawable/ic_next"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/mini_queue"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_queue"
        android:src="@drawable/ic_queue"
        app:tint="@color/white" />
</LinearLayout>
