<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vantablack"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/online_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/vantablack"
        app:navigationIcon="@drawable/ic_chevron_down"
        app:title="@string/modo_online"
        app:titleTextColor="@color/white" />

    <!-- Full-width square search bar -->
    <EditText
        android:id="@+id/online_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/spacing_sm"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/search_online_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/spacing_md"
        android:paddingEnd="@dimen/spacing_md"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:textCursorDrawable="@null"
        android:textSize="15sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/mini_player_height"
            android:scrollbars="none" />

        <ProgressBar
            android:id="@+id/online_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/online_empty"
            style="@style/TextSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_songs"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
